# Sobel

./: CMakeLists.txt  README.md  cmake_draft.txt  compile.bat  conanfile.txt
android/: CMakeLists.txt  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/sobelandroid/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  android_bridge.cpp  jni_bridge.cpp  native-lib.cpp
android/app/src/main/java/com/example/sobelandroid/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/sobelandroid/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
cli/: CMakeLists.txt
cli/src/: main.cpp
core/: CMakeLists.txt
core/include/: filter_selector.h  filter_sobel.h  image.h  image_processor.h  logger.h  util.h
core/src/: filter_selector.cpp  filter_sobel.cpp  filter_sobel_cuda.cu  image.cpp  image_processor.cpp  logger.cpp  util.cpp
include/: filter_base.h  filter_selector.h  filter_sobel.h  image.h  image_processor.h
qt/: CMakeLists.txt
src/: filter_selector.cpp  filter_sobel.cpp  image_processor.cpp  main.cpp
